using chalk for terminal output & using millisecondsBetweenEachClick from config

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "newQuery",
   "license": "ISC",
   "dependencies": {
+    "chalk": "^5.2.0",
     "node-global-key-listener": "^0.1.1",
     "robotjs": "^0.6.0"
   }
